--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -1,9 +1,13 @@
 {% extends "bootstrap/base.html" %}
 {% block content %}
-<div class="container">
+<div>
   Microblog:
-  <a href="/index">Home</a>
-  <a href="/login">Login</a>
+  <a href="{{ url_for('index') }}">Home</a>
+  {% if current_user.is_anonymous %}
+  <a href="{{ url_for('login') }}">Login</a>
+  {% else %}
+  <a href="{{ url_for('logout') }}">Logout</a>
+  {% endif %}
 </div>
 <div class="container">
 {% with messages = get_flashed_messages() %}
