--- a/core/templates/404.html
+++ b/core/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block blog %}
     <h1>File Not Found</h1>
     <p><a href="{{ url_for('index') }}">Back</a></p>
 {% endblock %}
