--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -38,4 +38,19 @@
     {{ super() }}
     {{ moment.include_moment() }}
     {{ moment.lang(g.locale) }}
+
+    <script>
+      function translate(sourceElem, destElem, sourceLang, destLang) {
+          $.post('/translate', {
+              text: $(sourceElem).text(),
+              source_language: sourceLang,
+              dest_language: destLang
+          }).done(function(response) {
+              $(destElem).text(response['text'])
+          }).fail(function() {
+              $(destElem).text("{{ _('Error: Could not contact server.') }}");
+          });
+      }
+  </script>
+
 {% endblock %}
