--- a/core/templates/auth/login.html
+++ b/core/templates/auth/login.html
@@ -6,7 +6,7 @@
     {{ wtf.quick_form(form) }}
     <p>
         Forgot Your Password?
-        <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
+        <a href="{{ url_for('auth.reset_password_request') }}">Click to Reset It</a>
     </p>
     
 {% endblock %}
