--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -8,10 +8,10 @@
         <li><a href="{{ url_for('index') }}">Home</a></li>
         <li><a href="{{ url_for('explore') }}">Explore</a></li>
         {% if current_user.is_anonymous %}
-        <li><a href="{{ url_for('login') }}">Login</a></li>
+        <li><a href="{{ url_for('auth.login') }}">Login</a></li>
         {% else %}
         <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
-        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+        <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
         {% endif %}
       </ul>
     </div>
