--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -14,6 +14,15 @@
         <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
         {% endif %}
       </ul>
+      {% if g.search_form %}
+      <form class="navbar-form navbar-left" method="get"
+              action="{{ url_for('search') }}">
+          <div class="form-group">
+              {{ g.search_form.q(size=20, class='form-control',
+                  placeholder=g.search_form.q.label.text) }}
+          </div>
+      </form>
+      {% endif %}
     </div>
     {% endblock %}
     {% block content %}
