--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -10,6 +10,13 @@
         {% if current_user.is_anonymous %}
         <li><a href="{{ url_for('auth.login') }}">Login</a></li>
         {% else %}
+        <li><a href="{{ url_for('messages') }}">{{ _('Messages') }}
+        {% set new_messages = current_user.new_messages() %}
+        <span id="message_count" class="badge"
+                style="visibility: {% if new_messages %}visible
+                                    {% else %}hidden {% endif %};">
+            {{ new_messages }}
+        </span></a></li>
         <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
         <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
         {% endif %}
@@ -102,6 +109,26 @@
                 }
             );
         });
+        function set_message_count(n) {
+            $('#message_count').text(n);
+            $('#message_count').css('visibility', n ? 'visible' : 'hidden');
+        }
+        {% if current_user.is_authenticated %}
+        $(function() {
+            var since = 0;
+            setInterval(function() {
+                $.ajax('{{ url_for('notifications') }}?since=' + since).done(
+                    function(notifications) {
+                        for (var i = 0; i < notifications.length; i++) {
+                            if (notifications[i].name == 'unread_message_count')
+                                set_message_count(notifications[i].data);
+                            since = notifications[i].timestamp;
+                        }
+                    }
+                );
+            }, 2000);
+        });
+        {% endif %}
   </script>
 
 {% endblock %}
