--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -43,6 +43,18 @@
         </ul>
         {% endif %}
       {% endwith %}
+      {% if current_user.is_authenticated %}
+      {% with tasks = current_user.get_tasks_in_progress() %}
+      {% if tasks %}
+          {% for task in tasks %}
+          <div class="alert alert-success" role="alert">
+              {{ task.description }}
+              <span id="{{ task.id }}-progress">{{ task.get_progress() }}</span>%
+          </div>
+          {% endfor %}
+      {% endif %}
+      {% endwith %}
+      {% endif %}
       {% block blog %}
       {% endblock %}
     </div>
@@ -113,6 +125,9 @@
             $('#message_count').text(n);
             $('#message_count').css('visibility', n ? 'visible' : 'hidden');
         }
+        function set_task_progress(task_id, progress) {
+            $('#' + task_id + '-progress').text(progress);
+        }
         {% if current_user.is_authenticated %}
         $(function() {
             var since = 0;
@@ -120,8 +135,16 @@
                 $.ajax('{{ url_for('notifications') }}?since=' + since).done(
                     function(notifications) {
                         for (var i = 0; i < notifications.length; i++) {
-                            if (notifications[i].name == 'unread_message_count')
-                                set_message_count(notifications[i].data);
+                            switch (notifications[i].name) {
+                                case 'unread_message_count':
+                                    set_message_count(notifications[i].data);
+                                    break;
+                                case 'task_progress':
+                                    set_task_progress(
+                                        notifications[i].data.task_id,
+                                        notifications[i].data.progress);
+                                    break;
+                            }
                             since = notifications[i].timestamp;
                         }
                     }
