--- a/core/templates/user.html
+++ b/core/templates/user.html
@@ -8,5 +8,8 @@
 {% endfor %}
 {% if user == current_user %}
 <p><a href="{{ url_for('edit_profile') }}">Edit your profile</a></p>
+    {% if not current_user.get_task_in_progress('export_posts') %}
+    <p><a href="{{ url_for('export_posts') }}">{{ _('Export your posts') }}</a></p>
+    {% endif %}
 {% endif %}
 {% endblock %}
